syntax = "proto3";

package auth;

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
  rpc Refresh(RefreshRequest) returns (RefreshResponse) {}
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  string access_token = 1;
  string refresh_token = 2;
  string user_id = 3;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  string user_id = 3;
}

message ValidateRequest {
  string access_token = 1;
}

message ValidateResponse {
  string username = 1;
}

message RefreshRequest {
  string refresh_token = 1;
}

message RefreshResponse {
  string access_token = 1;
}