syntax = "proto3";

import "google/protobuf/empty.proto";

package chat;

// A service for client streaming chat messages
service ClientStreamingService {
  // A client stream for sending and receiving chat messages
  rpc ChatStream (stream ChatPacket) returns (stream ChatPacket) {}
}

// A service for creating and finding chat channels
service ChannelService {
  // Create or find a chat channel
  rpc FindOrCreateChannel (CreateChannelRequest) returns (CreateChannelResponse) {}
}

// A service for persisting chat messages
service MessagePersistenceService {
  // Submit a chat message to be persisted
  rpc PersistChatMessage (MessageToPersist) returns (google.protobuf.Empty) {}
}

// User-facing packet that can be streamed over the wire
message ChatPacket {
  oneof packet_type {
    // A request to join a chat room
    JoinChatRequest join_request = 1;
    // A chat message
    ChatMessage chat_message = 2;
  }
}

// A request to join a chat room
message JoinChatRequest {
  // The user's unique identifier
  string user_id = 1;
  // The name of the chat room to join
  string channel_name = 2;
}

// A chat message
message ChatMessage {
  // The user's unique identifier
  string user_id = 1;
  // The message content
  string message = 2;
  // The timestamp of the message
  int64 timestamp = 3;
}

// A message that will be persisted for a specific chat room
message MessageToPersist {
  string channel_id = 1;
  // The user's unique identifier
  string user_id = 2;
  // The message content
  string message = 3;
  // The timestamp of the message
  int64 timestamp = 4;
}

// A request to create a chat channel
message CreateChannelRequest {
  // The name of the chat channel
  string channel_name = 1;
}

// A response to a request to create a chat channel
message CreateChannelResponse {
  // The name of the chat channel
  string channel_name = 1;
  // The unique identifier of the chat channel
  string channel_id = 2;
}